<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/simpson"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <ImageView
                android:id="@+id/about"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="2dp"
                android:contentDescription="@string/about"
                android:onClick="About"
                android:src="@drawable/ic_information" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/main_card_view"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_margin="12dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/image_view_character"
                    android:layout_width="260dp"
                    android:layout_height="225dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/sample_img" />

                <TextView
                    android:id="@+id/tv_quote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image_view_character"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/simpson"
                    android:text="@string/sample_quote"
                    android:textColor="#000000"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/tv_character_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_quote"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/simpson"
                    android:text="@string/homer"
                    android:textColor="#000000"
                    android:textSize="20sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:onClick="SetWallpaper"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/simpson"
                    android:text="Set As Wallpaper"
                    android:textColor="@color/greenish"
                    android:textSize="30sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:rowCount="1">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1.2"
                android:layout_margin="12dp"
                android:onClick="ShareQuote"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/simpson"
                        android:text="@string/share"
                        android:textColor="@color/orange"
                        android:textSize="30sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                android:onClick="NextQuote"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/simpson"
                        android:text="@string/next"
                        android:textColor="@color/greenish"
                        android:textSize="30sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>


</ScrollView>