<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="1"
            android:columnOrderPreserved="false"
            android:rowCount="4">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/abt_simpson" />

                    <TextView
                        android:id="@+id/abt_simpson"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/simpson"
                        android:text="@string/abt_simpson"
                        android:textColor="@color/orange"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/abt_simpson_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/abt_simpson"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/simpson"
                        android:text="@string/abt_simpson_detail"
                        android:textColor="@color/greenish"
                        android:textSize="24sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:onClick="Hotstar"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/simpson"
                        android:layout_below="@id/disney_star"
                        android:layout_centerHorizontal="true"
                        android:text="@string/hotstar"
                        android:textColor="@color/greenish"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/disney_star"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_disney__hotstar_logo" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/about_image" />

                    <TextView
                        android:id="@+id/about_app"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/simpson"
                        android:text="@string/abt_app"
                        android:textColor="@color/yellow"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/about_app_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/about_app"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/simpson"
                        android:text="@string/abt_app_detail"
                        android:textColor="@color/greenish"
                        android:textSize="24sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="62dp"
                        android:layout_height="62dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/dev_image" />


                    <TextView
                        android:id="@+id/about_developer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/simpson"
                        android:text="@string/abt_dev"
                        android:textColor="@color/grey"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/about_developer_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/about_developer"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/simpson"
                        android:text="@string/abt_dev_detail"
                        android:textColor="@color/greenish"
                        android:textSize="24sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:id="@+id/contact_dev"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/simpson"
                        android:text="@string/contact_dev"
                        android:textColor="@color/orange"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/contact_dev_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/contact_dev"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/simpson"
                        android:text="@string/contact_dev_detail"
                        android:textColor="@color/greenish"
                        android:textSize="24sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="3"
            android:columnOrderPreserved="false"
            android:rowCount="2">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                android:onClick="Gmail"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="62dp"
                        android:layout_height="62dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_gmail" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                android:onClick="Twitter"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="62dp"
                        android:layout_height="62dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_twitter" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                android:onClick="LinkedIn"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="62dp"
                        android:layout_height="62dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_linked" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </GridLayout>


    </LinearLayout>

</ScrollView>